# curiosity

./: .gitignore  LICENSE  README.md  README.org  cabal.project  curiosity.cabal  default.nix  prototype-hs-exe.cabal  shell.nix  treefmt.toml
.github/workflows/: README.md  ci.yml  post-build-hook
content/: about.md  default.nix  documentation.md  humans.txt
content/.well-known/: security.txt
content/documentation/: architecture.md  attributes.md  changelog.md  ci.md  clis.md  deployment.md  emails.md  environments.md  forms.md  library.md  live-data.md  machine.md  man-pages.md  messages.md  nix.md  objects.md  orders.md  permissions.md  processes.md  queues.md  quotations.md  scenarios.md  search.html  sitemap.md  smart.md  source.md  state-0.md  state.md  tests.md  time.md  ubl.md  validation-data.md  validation.md  views.md
content/documentation/objects/: contracts.md  entities.md  invoices.md  units.md  users.md
content/documentation/processes/: signup.md
content/documentation/scenarios/: quotation-flow.md
curls/: login-no-username.sh  signup.sh
data/: alice-with-bio.json  alice.json  alpha.json  bob-0.json  bob-1.json  bob-2.json  charlie.json  inv-0.json  january.json  mila.json  one.json
docker/: default.nix
documentation/: index.md
example/: prototype-hs-example.cabal
example/executable/: .dir-locals.el  App.hs  ExampleMain.hs
example/executable/Prototype/Example/Exe/: Parse.hs  Process.hs
example/src/Prototype/Example/: Data.hs  Runtime.hs  Server.hs  State.hs
example/src/Prototype/Example/Data/: Todo.hs  User.hs
example/src/Prototype/Example/Repl/: Parse.hs
example/src/Prototype/Example/Server/: Auth.hs  Private.hs  Public.hs
example/src/Prototype/Example/Server/Private/: Auth.hs  Pages.hs
example/src/Prototype/Example/Server/Public/: Pages.hs
example/test/Prototype/Example/: DataSpec.hs
example/test/Prototype/Example/Data/: Shared.hs  TodoSpec.hs  UserSpec.hs
exe/: prototype-hs-exe.cabal
exe/executable/: App.hs  Main.hs  cty-interactive.hs  cty-parse.hs  cty-repl.hs  cty-serve.hs  cty-sock.hs  cty.hs
exe/src/: .dir-locals.el
exe/src/Prototype/Example/: Server.hs
exe/src/Prototype/Exe/: Data.hs  Runtime.hs  Server.hs
exe/test/: .dir-locals.el
exe/test/Prototype/Exe/: DataSpec.hs
executable/: .dir-locals.el  cty-interactive.hs  cty-parse.hs  cty-repl.hs  cty-sock.hs  cty.hs
executable/Prototype/: Parse2.hs
executable/Prototype/Exe/Exe/: Parse.hs  Parse2.hs  Process.hs
lib/: .dir-locals.el  prototype-hs-lib.cabal
lib/src/: Prelude.hs  PrototypeHsLibPrelude.hs
lib/src/Prototype/Backend/: InteractiveState.hs  LiveState.hs
lib/src/Prototype/Backend/InteractiveState/: Class.hs  Repl.hs
lib/src/Prototype/Backend/InteractiveState/Disp/: Helpers.hs
machine/: configuration.nix  disk-size.nix  https.nix  no-gui.nix
man/: cty.1.md  curiosity.7.md  default.nix
modules/: app.nix  brotlify.nix  curiosity.nix  nginx.nix  play.nix
nix/: contents.nix  overlay.nix  overlays.nix  sources.json
scenarios/: 0.golden  0.txt  1.golden  1.txt  2.golden  2.txt  example.golden  example.txt  init-entities.golden  init-entities.txt  init-form-simple-contracts.golden  init-form-simple-contracts.txt  init-units.golden  init-units.txt  init-users.golden  init-users.txt  invite-actions.golden  invite-actions.txt  quotation-flow--reject.golden  quotation-flow--reject.txt  quotation-flow.golden  quotation-flow.txt  signup-actions.golden  signup-actions.txt  state-0.golden  state-0.txt  time.golden  time.txt  user-signup--blocked.golden  user-signup--blocked.txt  user-signup--no-tos.golden  user-signup--no-tos.txt  user-signup--step.golden  user-signup--step.txt  user-signup.golden
scripts/: build-doc.sh  build-image.sh  build-manpages.sh  create-droplet.sh  deploy.sh  doc.Makefile  entr-doc.sh  ghci-cty.conf  ghci-cty.sh  ghci-dsl.conf  ghci-dsl.sh  ghci-parse.conf  ghci-parse.sh  ghci-repl.conf  ghci-repl.sh  ghci-serve.conf  ghci-serve.sh  ghci-sock.conf  ghci-sock.sh  ghci.conf  ghci.sh  ghcid.sh  import-image.sh  run-coverage.sh  run-example.sh  run-full-environment.sh  run-shell.sh  run-tests.sh  runvm.sh  serve-doc.sh  show-paths.sh  spider.sh  stork.css  stork.toml  template.html  upload-image.sh  view-manpages.sh
scripts/integration-tests/: README.md  default.nix  nginx.conf  readme.md  run-curiosity.sh  run-nginx.sh  test-curiosity.sh  vm-test.nix
src/: .dir-locals.el
src/Curiosity/: Command.hs  Core.hs  Data.hs  Dsl.hs  Interpret.hs  Parse.hs  Parse2.hs  Process.hs  Run.hs  Runtime.hs  Server.hs
src/Curiosity/Data/: Business.hs  Command.hs  Counter.hs  Country.hs  Demand.hs  Email.hs  Employment.hs  Invoice.hs  Legal.hs  Order.hs  Quotation.hs  RemittanceAdv.hs  SimpleContract.hs  Todo.hs  User.hs
src/Curiosity/Form/: Login.hs  Signup.hs
src/Curiosity/Html/: Action.hs  Business.hs  Email.hs  Employment.hs  Errors.hs  Homepage.hs  Invoice.hs  LandingPage.hs  Legal.hs  Misc.hs  Navbar.hs  Order.hs  Profile.hs  Quotation.hs  Run.hs  SimpleContract.hs  User.hs
src/Curiosity/Repl/: Parse.hs
src/Curiosity/Runtime/: Error.hs  IO.hs  Type.hs
src/Curiosity/Runtime/IO/: AppM.hs
src/Curiosity/STM/: Helpers.hs
src/Curiosity/Server/: Helpers.hs
src/Prototype/: Data.hs  Example.hs  Parse.hs  Process.hs  Runtime.hs  Server.hs
src/Prototype/Data/: Todo.hs  User.hs
src/Prototype/Exe/: Data.hs  Runtime.hs  Server.hs
src/Prototype/Exe/Data/: Todo.hs  User.hs
src/Prototype/Exe/Form/: Login.hs  Signup.hs
src/Prototype/Exe/Repl/: Parse.hs
src/Prototype/Form/: Login.hs  Signup.hs
src/Prototype/Html/: Errors.hs  Homepage.hs  LandingPage.hs  Navbar.hs  Profile.hs
src/Prototype/Repl/: Parse.hs
src/Prototype/Server/: Helpers.hs  Private.hs  Public.hs
test/Curiosity/: DataSpec.hs
test/Curiosity/Data/: Shared.hs  TodoSpec.hs  UserSpec.hs
test/Prototype/: DataSpec.hs
test/Prototype/Data/: Shared.hs  TodoSpec.hs  UserSpec.hs
tests/: CuriositySpec.hs  run-scenarios.hs
tests/Curiosity/: CommandSpec.hs  CoreSpec.hs  DataSpec.hs  DslSpec.hs  RunSpec.hs  RuntimeSpec.hs
(+36 files in other folders)
