cabal-version:      2.2
name:               curiosity
version:            0.1.0.0
category:           web

common common-extensions
  default-language: Haskell2010
  default-extensions:
    StrictData
    MultiParamTypeClasses
    DerivingStrategies
    DerivingVia
    DeriveGeneric
    RecordWildCards
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    GADTs
    OverloadedStrings
    PackageImports

-- Common language settings
common lang-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind
-- Dependencies common to both the exe and the lib.
-- This list can be "Extended" using explicit build-depends stanzas in the library or executable.
-- So far, I've omitted most version bounds, they can be generated using `nix-shell --run 'cabal freeze'`
common common-dependencies
  build-depends:
      base-noprelude >=4.7 && <5
    , protolude

    -- Our dependencies
    , commence-core
    , commence-interactive-state 

    -- control
    , stm
    , lens
    , exceptions
    , random

    , megaparsec

    -- data
    , text
    , containers
    , pretty-simple
    , data-default-class

    , http-types
    , monad-log

    -- Servant
    , servant
    , servant-server
    -- Authentication: use Jose based JWK settings as well.
    , servant-auth-server
    , jose
    , wai
    , warp

    , servant-blaze
    , blaze
    , blaze-html
    , blaze-markup
    , design-hs-lib
    , aeson
  -- mixins: design-hs-lib hiding (Prelude)
  --       -- since cabal mixins are a half baked feature, hiding one module means hiding every other module.
  --       -- And then we have to explicity specify another mixin to be able to the modules we never intended to hide.
  --       , design-hs-lib (Smart.Html.Form as Smart.Html.Form)

library
  import: common-dependencies, lang-settings, common-extensions
  hs-source-dirs: src
  exposed-modules:
    Curiosity.Command
    Curiosity.Data
    Curiosity.Repl.Parse
    Curiosity.Runtime
    Curiosity.Data.Todo
    Curiosity.Data.User
    Curiosity.Form.Login
    Curiosity.Form.Signup
    Curiosity.Html.Errors
    Curiosity.Html.Homepage
    Curiosity.Html.LandingPage
    Curiosity.Html.Navbar
    Curiosity.Html.Profile
    Curiosity.Parse
    Curiosity.Process
    Curiosity.Server
    Curiosity.Server.Helpers
    WaiAppStatic.Storage.Filesystem.Extended
  -- More dependencies only specific to the library
  build-depends:
      http-api-data
    , bytestring 
    , cryptonite
    , directory 
    , fast-logger
    , filepath
    , memory
    , optparse-applicative
    , unix-compat
    , wai-app-static

-- HTTP server only
executable cty-serve
  import: common-dependencies, lang-settings, common-extensions
  main-is: cty-serve.hs
  build-depends:
      optparse-applicative
    , curiosity
    , async
    , fast-logger
  hs-source-dirs: bin
  ghc-options:
    -threaded

-- HTTP server + REPL
executable cty-interactive
  import: common-dependencies, lang-settings, common-extensions
  main-is: cty-interactive.hs
  build-depends:
      optparse-applicative
    , curiosity
    , async
    , fast-logger
  hs-source-dirs: bin
  ghc-options:
    -threaded

-- Command parser
executable cty-parse
  import: common-dependencies, lang-settings, common-extensions
  main-is: cty-parse.hs
  build-depends:
      optparse-applicative
    , curiosity
    , async
    , fast-logger
  hs-source-dirs: bin
  ghc-options:
    -threaded

-- REPL only
executable cty-repl
  import: common-dependencies, lang-settings, common-extensions
  main-is: cty-repl.hs
  build-depends:
      optparse-applicative
    , curiosity
    , async
    , fast-logger
  hs-source-dirs: bin
  ghc-options:
    -threaded

-- REPL only, uses optparse-applicative
executable cty-repl-2
  import: common-dependencies, lang-settings, common-extensions
  main-is: cty-repl-2.hs
  build-depends:
      async
    , curiosity
    , fast-logger
    , haskeline
    , optparse-applicative
  hs-source-dirs: bin
  ghc-options:
    -threaded

-- Interpret a file containing commands
executable cty-run
  import: common-dependencies, lang-settings, common-extensions
  main-is: cty-run.hs
  build-depends:
      async
    , curiosity
    , fast-logger
    , optparse-applicative
  hs-source-dirs: bin
  ghc-options:
    -threaded

-- Server-side program to interact with the server.
executable cty
  import: common-dependencies, lang-settings, common-extensions
  main-is: cty.hs
  build-depends:
      bytestring
    , directory
    , optparse-applicative
    , curiosity
    , async
    , fast-logger
  hs-source-dirs: bin
  ghc-options:
    -threaded

-- A multi-client REPL, exposed through a UNIX-domain socker
executable cty-sock
  import: common-dependencies, lang-settings, common-extensions
  main-is: cty-sock.hs
  build-depends:
      optparse-applicative
    , curiosity
    , async
    , bytestring
    , fast-logger
    , network
  hs-source-dirs: bin
  ghc-options:
    -threaded

-- test-suite curiosity-test

--   import:
--        common-dependencies
--      , lang-settings
--      , common-extensions

--   -- merged with `common-build-depends` which is imported.
--   -- borrowed from https://github.com/centralapp/termigrator/pull/2/files#diff-1248d02c5f3dd87de97e3ff52a6d0169R82
--   build-depends:
--       QuickCheck
--     , hspec
--     , curiosity

--   other-modules:
--      Curiosity.Data.UserSpec
--      Curiosity.Data.TodoSpec
--      Curiosity.DataSpec
--      Curiosity.Data.Shared

--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs:
--       test
