cabal-version:      2.2
name:               curiosity
version:            0.1.0.0
category:           web

common common-extensions
  default-language: Haskell2010
  default-extensions:
    StrictData
    MultiParamTypeClasses
    DerivingStrategies
    DerivingVia
    DeriveGeneric
    RecordWildCards
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    GADTs
    OverloadedStrings
    PackageImports

-- Common language settings
common lang-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind
-- Dependencies common to both the exe and the lib.
-- This list can be "Extended" using explicit build-depends stanzas in the library or executable.
-- So far, I've omitted most version bounds, they can be generated using `nix-shell --run 'cabal freeze'`
common common-dependencies
  build-depends:
      base-noprelude >=4.7 && <5
    , protolude

    -- Our dependencies
    , commence-core
    , commence-interactive-state
    , design-hs-lib

    -- control
    , stm
    , lens
    , exceptions
    , random

    , megaparsec

    -- data
    , text
    , containers
    , pretty-simple
    , data-default-class

    , http-types
    , monad-log

    -- Servant
    , servant
    , servant-blaze
    , servant-server
    , servant-websockets
    -- Authentication: use Jose based JWK settings as well.
    , servant-auth-server
    , jose
    , wai
    , warp

    , aeson
    , blaze
    , blaze-html
    , blaze-markup
    , template-haskell
    , unix
  -- mixins: design-hs-lib hiding (Prelude)
  --       -- since cabal mixins are a half baked feature, hiding one module means hiding every other module.
  --       -- And then we have to explicity specify another mixin to be able to the modules we never intended to hide.
  --       , design-hs-lib (Smart.Html.Form as Smart.Html.Form)

library
  import: common-dependencies, lang-settings, common-extensions
  hs-source-dirs: src
  exposed-modules:
    Curiosity.Command
    Curiosity.Data
    Curiosity.Data.Business
    Curiosity.Data.Counter
    Curiosity.Data.Employment
    Curiosity.Data.Invoice
    Curiosity.Data.Legal
    Curiosity.Data.User
    Curiosity.Dsl
    Curiosity.Form.Login
    Curiosity.Form.Signup
    Curiosity.Html.Action
    Curiosity.Html.Business
    Curiosity.Html.Employment
    Curiosity.Html.Errors
    Curiosity.Html.Homepage
    Curiosity.Html.Invoice
    Curiosity.Html.LandingPage
    Curiosity.Html.Legal
    Curiosity.Html.Misc
    Curiosity.Html.Navbar
    Curiosity.Html.Profile
    Curiosity.Parse
    Curiosity.Process
    Curiosity.Run
    Curiosity.Runtime
    Curiosity.Server
    Curiosity.Server.Helpers
    WaiAppStatic.Storage.Filesystem.Extended
  -- More dependencies only specific to the library
  build-depends:
      http-api-data
    , bytestring
    , cryptonite
    , directory
    , fast-logger
    , filepath
    , haskeline
    , memory
    , network
    , optparse-applicative
    , unix-compat
    , wai-app-static

-- The single-binary Curiosity suite.
executable cty
  import: common-dependencies, lang-settings, common-extensions
  main-is: cty.hs
  build-depends:
      async
    , bytestring
    , curiosity
    , directory
    , fast-logger
    , optparse-applicative
  hs-source-dirs: bin
  ghc-options:
    -threaded

-- A multi-client REPL, exposed through a UNIX-domain socker
executable cty-sock
  import: common-dependencies, lang-settings, common-extensions
  main-is: cty-sock.hs
  build-depends:
      optparse-applicative
    , curiosity
    , async
    , bytestring
    , fast-logger
    , network
  hs-source-dirs: bin
  ghc-options:
    -threaded

test-suite curiosity-tests
  import: common-dependencies, lang-settings, common-extensions
  build-depends:
      curiosity
    , directory
    , filepath
    , hspec
    , optparse-applicative
    , QuickCheck
  other-modules:
      CuriositySpec
    , Curiosity.DataSpec
    , Curiosity.RuntimeSpec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      tests

test-suite curiosity-scenarios
  import: common-dependencies, lang-settings, common-extensions
  build-depends:
      bytestring
    , curiosity
    , filepath
    , Glob
    , lens
    , tasty
    , tasty-silver
  type: exitcode-stdio-1.0
  main-is: run-scenarios.hs
  hs-source-dirs:
      tests
