cabal-version:      2.2
name:               prototype-hs-example
version:            0.1.0.0
category:           web

common common-extensions
  default-language: Haskell2010
  default-extensions:
    StrictData
    MultiParamTypeClasses
    DerivingStrategies
    DerivingVia
    DeriveGeneric
    RecordWildCards
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    GADTs
    OverloadedStrings
    PackageImports 

-- Common language settings
common lang-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind

-- Dependencies common to both the exe and the lib.
-- This list can be "Extended" using explicit build-depends stanzas in the library or executable.
-- So far, I've omitted most version bounds, they can be generated using `nix-shell --run 'cabal freeze'`
common common-dependencies
  build-depends:
      base-noprelude >=4.7 && <5
    , protolude 

    -- Our dependencies 
    , start-servant 
    , pretty-simple 
    , prototype-hs-lib 

    , stm
    , data-default-class
    
  mixins:
    start-servant hiding (Prelude)

library 
  import: common-dependencies, lang-settings, common-extensions
  build-depends: start-servant
  hs-source-dirs: src
  exposed-modules:
    Prototype.Example.Data 
    Prototype.Example.Runtime  
    Prototype.Example.Data.Todo
    Prototype.Example.Data.User 