cabal-version:      2.2
name:               prototype-hs-example
version:            0.1.0.0
category:           web

common common-extensions
  default-language: Haskell2010
  default-extensions:
    StrictData
    MultiParamTypeClasses
    DerivingStrategies
    DerivingVia
    DeriveGeneric
    RecordWildCards
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    GADTs
    OverloadedStrings
    PackageImports 

-- Common language settings
common lang-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind

-- Dependencies common to both the exe and the lib.
-- This list can be "Extended" using explicit build-depends stanzas in the library or executable.
-- So far, I've omitted most version bounds, they can be generated using `nix-shell --run 'cabal freeze'`
common common-dependencies
  build-depends:
      base-noprelude >=4.7 && <5
    , protolude 

    -- Our dependencies 
    , start-servant 
    , prototype-hs-lib 

    , stm
    , lens 

    , megaparsec 

    -- data 
    , text 
    , containers 
    , pretty-simple 
    , data-default-class

    , http-types
    , monad-log 

    -- Servant
    , servant
    , servant-server
    , servant-blaze
    , blaze 

library 
  import: common-dependencies, lang-settings, common-extensions
  hs-source-dirs: src
  exposed-modules:
    Prototype.Example.Data 
    Prototype.Example.Repl.Parse  
    Prototype.Example.Runtime  
    Prototype.Example.Data.Todo
    Prototype.Example.Data.User 
    Prototype.Example.Server
    Prototype.Example.Server.Public 

executable prototype-hs-example-exe
  import: common-dependencies, lang-settings, common-extensions
  main-is: ExampleMain.hs
  build-depends:
      optparse-applicative
    , prototype-hs-example 
    , async
  hs-source-dirs: executable
  other-modules:
    Prototype.Example.Exe.Parse
  
 
test-suite prototype-hs-example-test

  import: 
       common-dependencies
     , lang-settings
     , common-extensions
     
  -- merged with `common-build-depends` which is imported.
  -- borrowed from https://github.com/centralapp/termigrator/pull/2/files#diff-1248d02c5f3dd87de97e3ff52a6d0169R82
  build-depends: 
      QuickCheck
    , hspec
    , prototype-hs-example

  other-modules: 
     Prototype.Example.Data.UserSpec
     Prototype.Example.Data.TodoSpec
     Prototype.Example.DataSpec
     Prototype.Example.Data.Shared

  type: exitcode-stdio-1.0
  main-is: Spec.hs 
  hs-source-dirs: 
      test  