cabal-version:      2.2
name:               prototype-hs-lib
version:            0.1.0.0
category:           web

-- PackageImports + NoImplicitPrelude are required to disambiguate the Prelude modules from upstream dependencies.
-- At the time of writing, cabal's mixins "feature" causes more problems than solving (as is with most things in cabal). 
-- Mixins can be used to hide modules from dependencies, but introducing a mixin also introduces complexity, and doesn't seem to work correctly.
common common-extensions
  default-language: Haskell2010
  default-extensions:
    StrictData
    MultiParamTypeClasses
    DerivingStrategies
    DerivingVia
    DeriveGeneric
    RecordWildCards
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    GADTs
    OverloadedStrings
    PackageImports 
    NoImplicitPrelude 

-- Common language settings
common lang-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind

-- Dependencies common to both the exe and the lib.
-- This list can be "Extended" using explicit build-depends stanzas in the library or executable.
-- So far, I've omitted most version bounds, they can be generated using `nix-shell --run 'cabal freeze'`
common common-dependencies
  build-depends:
      base-noprelude >=4.7 && <5
    , protolude 

    -- Our dependencies 
    , start-servant 
    , pretty-simple 

library 
  import: common-dependencies, lang-settings, common-extensions
  build-depends: start-servant
  hs-source-dirs: src
  exposed-modules:
    Prelude
    Prototype.Backend.InteractiveState 